--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "developers-portfolio",
   "description": "A personal static website/portfolio template hosted with GitHub Pages, built to showcase my recent projects.",
   "homepage": "https://mhshammakhi.github.io/newone",
-  "version": "2.0.0",
+  "version": ">=2.0.0",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
-    "sass": "^1.54.3",
-    "react-typist-component": "^1.0.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
-    "react-loading-skeleton": "^3.1.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "gh-pages": "^4.0.0"
+    "@testing-library/jest-dom": ">=5.16.5",
+    "@testing-library/react": ">=13.3.0",
+    "@testing-library/user-event": ">=13.5.0",
+    "axios": ">=0.27.2",
+    "bootstrap": ">=5.2.0",
+    "gh-pages": ">=4.0.0",
+    "react": ">=18.2.0",
+    "react-bootstrap": ">=2.5.0",
+    "react-dom": ">=18.2.0",
+    "react-loading-skeleton": ">=3.1.0",
+    "react-router": ">=6.3.0",
+    "react-router-dom": ">=6.3.0",
+    "react-scripts": "^2.1.3",
+    "react-typist-component": ">=1.0.3",
+    "sass": ">=1.54.3",
+    "typescript": ">=4.7.4",
+    "web-vitals": ">=2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -32,8 +32,8 @@
     "custom-deploy": "node pages.js"
   },
   "engines": {
-    "npm": "^8.11.0",
-    "node": "^18.13.0"
+    "npm": ">=8.11.0",
+    "node": "<=18.13.0"
   },
   "eslintConfig": {
     "extends": [
